Fix spacing

--- a/frontend/src/assets/stylesheets/group_show.css
+++ b/frontend/src/assets/stylesheets/group_show.css
@@ -6,7 +6,7 @@
   padding-top: 0;
   padding-bottom: 76px;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
 }
 
 .group-show-main {
